# lllsp

./: .gitignore  README.md  clean.sh  dev.sh  install.sh
editors/vscode/: README.md  install.sh
editors/vscode/llvm-language-server/: .gitignore  .vscodeignore  DEVELOPER.md  README.md  package-lock.json  package.json  requirements.txt
editors/vscode/llvm-language-server/scripts/: build.sh  make_bundled.sh
editors/vscode/llvm-language-server/src/: LanguageClient.ts  constants.ts  extension.ts  python.ts
editors/vscode/llvm-language-server/tool/: lllsp.py
server/: dev-requirements.txt  lllsp  pyproject.toml  runtime-requirements.txt
server/src/: __init__.py  __main__.py  cli.py
server/src/ir/: __init__.py  location.py
server/src/lsp/: __init__.py
server/src/parser/: __init__.py  reader.py
server/src/segments/: __init__.py
